# open-source-website

./: .gitignore  COMPLETION_REPORT.md  hugo.toml  justfile  plan-format-transcription.md  plan.md
.claude/: settings.local.json
assets/css/: index.css  main.css
content/blog/2011-02-27-about-the-rstudio-project/: index.md
content/blog/2021-02-17-mentorship-reflection/: index.md
content/blog/2024-04-22-sparklyr-updates/: index.md  index.qmd  sparklyr-updates.Rmd
content/blog/2025-04-28-1.7-release/: index.md  index.qmd
content/blog/air/: index.md
content/blog/anscombes-quartet/: index.md
content/blog/multi-blog-post/: index.md  index.qmd
content/blog/no-categories/: index.md  index.qmd
content/blog/plots-in-tables/: index.md  index.qmd
content/blog/shiny-python-1.0/: index.html  index.md  index.qmd
content/blog/validation-libs-2025/: index.qmd  pyproject.toml
content/blog/version-0.14.0/: index.qmd
content/events/pydata-boston-2025/: _index.md
content/people/andrew-holz/: _index.md
content/software/: all.md
data/: github-repos.toml  software-match-ignore.toml  videos.toml  youtube.toml
layouts/blog/: list.html  single.html
layouts/partials/: card_resource.html  video_duration.html
layouts/resources/: term.html
layouts/software/: all.html  terms.html
scripts/: create-cheatsheet-thumbnails.py  create-new-software.py  download-software-images.py  download-youtube-audio.py  format-transcription.py  import-cheatsheets.py  summarize-software-readmes.py  transcribe.py  update-software-frontmatter.py  update-youtube-videos.py
(+5157 files in other folders)
