[project]
name = "validation-libs-2025"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dataframely>=1.14.0",
    "great-tables>=0.19.0",
    "jupyter>=1.1.1",
    "narwhals>=2.8.0",
    "pandera>=0.26.1",
    "patito>=0.8.5",
    "pointblank>=0.14.0",
    "polars>=1.34.0",
    "typing>=3.10.0.0",
    "validoopsie>=1.6.7",
]
